Fix spacing a bit on e.g., Anthem blocks

--- a/components/src/components/heading/heading.scss
+++ b/components/src/components/heading/heading.scss
@@ -97,3 +97,9 @@ ldf-heading, :host {
 .source {
   width: 100%;
 }
+
+
+ldf-editable-text.body-text {
+  display: block;
+  padding-bottom: 1em;
+}
